// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component renders correctly 1`] = `
<div
  className="sc-bdVaJa bOsiER"
>
  <div
    className="sc-bwzfXH hsISIs"
  />
</div>
`;

exports[`Modal component renders correctly when not set to show 1`] = `
<div
  className="sc-bdVaJa ckWgxK"
>
  <div
    className="sc-bwzfXH bARPNA"
  />
</div>
`;
